Add tests for Offer api
